@@ -10,6 +10,7 @@ Features
 - capable of maintaining huge amounts of cache memory
 - suitable for tiny/small entries with low overhead using the chunked implementation
 - runs with Java 8 and Java 11 - support for Java 7 and earlier has been dropped with version 0.7.0
+- to build OHC from source, Java 11 or newer (tested with Java 11 + 15) is required
 
 Performance
 ===========
@@ -22,7 +23,7 @@ A very basic impression on the speed is in the _Benchmarking_ section.
 Requirements
 ============
 
-Java7 VM that support 64bit and has ``sun.misc.Unsafe`` (Oracle JVMs on x64 Intel CPUs).
+Java 8 VM that support 64bit and has ``sun.misc.Unsafe`` (Oracle JVMs on x64 Intel CPUs).
 
 OHC is targeted for Linux and OSX. It *should* work on Windows and other Unix OSs.
 
@@ -50,8 +51,6 @@ fully prepared entry into the segment.
 
 Eviction is performed using an LRU algorithm. A linked list through all cached elements per segment is used to keep
 track of the eldest entries.
-
-The extension jar ``ohc-core-j8`` is recommmended to use of new ``sun.misc.Unsafe`` methods in Java 8.
 
 Chunked implementation
 ----------------------
@@ -81,10 +80,6 @@ Specifying the ``fixedKeyLength`` and ``fixedValueLength`` builder properties re
 8 bytes per entry.
 
 Serialization, direct access and get-with-loader functions are not supported in this implementation.
-
-NOTE: The CRC hash algorithm requires JRE 8 or newer.
-
-The extension jar ``ohc-core-j8`` is not required for the chunked implementation.
 
 To enable the chunked implementation, specify the ``chunkSize`` in ``org.caffinitas.ohc.OHCacheBuilder``.
 
@@ -183,14 +178,6 @@ Key and value serializers need to implement the ``CacheSerializer`` interface. T
 - ``void serialize(Object obj, DataOutput out)`` to serialize the given object to the data output
 - ``T deserialize(DataInput in)`` to deserialize an object from the data input
 
-Java 11
--------
-
-Java 11 support is still *experimental*!
-
-OHC has been tested with some *early access* releases of Java 11 and the unit and JMH tests pass. However,
-it requires access to ``sun.misc.Unsafe`` via the JVM option ``--add-exports java.base/sun.nio.ch=ALL-UNNAMED``.
-
 Building from source
 ====================
 
@@ -198,8 +185,7 @@ Clone the git repo to your local machine. Either use the stable master branch or
 
 ``git clone https://github.com/snazy/ohc.git``
 
-You need Oracle JDK8 to build the source (Oracle JRE7 is the minimum requirement during runtime).
-Just execute
+You need OpenJDK 11 or newer to build from source. Just execute
 
 ``mvn clean install``
 
@@ -208,7 +194,7 @@ Benchmarking
 
 You need to build OHC from source because the big benchmark artifacts are not uploaded to Maven Central.
 
-Execute ``java -jar ohc-benchmark/target/ohc-benchmark-0.5.1-SNAPSHOT.jar -h`` (when building from source)
+Execute ``java -jar ohc-benchmark/target/ohc-benchmark-0.7.1-SNAPSHOT.jar -h`` (when building from source)
 to get some help information.
 
 Generally the benchmark tool starts a bunch of threads and performs _get_ and _put_ operations concurrently
